--- a/.github/workflows/issue-event.yaml
+++ b/.github/workflows/issue-event.yaml
@@ -16,7 +16,7 @@ jobs:
           issue-number: ${{ github.event.issue.number }}
           body: |
             Hola @${{ github.event.issue.user.login }} 👋
-            ¿Encontraste un bug? Llamando a @BGMP para poder arreglar esto!!!
+            ¿Encontraste un bug? Llamando a @IgnacioPalma para poder arreglar esto!!!
         
             ![Bug](https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExMzFyb203amx2b2k2eXozMzRhZTEzbHhuaGlvcnRuNzVqY3U0YjU3biZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/26DOMIeH5yZgc4GD6/giphy.gif)
           
